--- a/src/css/Chart.css
+++ b/src/css/Chart.css
@@ -1,5 +1,5 @@
 .bgContainer {
-    background-image: url('https://s3-alpha-sig.figma.com/img/0c77/3b4e/13c3507aae6dd22ab12f949706660279?Expires=1633305600&Signature=YGwc4ywm~SY8D6YVNI~XwkJaB~gUgpqfY7CNjQbvGRM85SdziKRBzK30IeMsszW8pwllTh0UA5V9STHcwxEdPd~P5DRE9d-uefCNtzt1JZQgGN8SLTYpDumMM6z4az90a95PKPksJ5HhmNaiDv7nKs7g7O0yOJ0oV3bpisoJls6q2MxYFzJZgVZHqXy3FY7Fe77uKSzqs87f~T517F4txTIrqCoPKW-bcwNlDL5qbXv8dW-8UKnB3XNwnNkKGp9ICQDT-SHTWPytwZT4LGRWs6s5E0yu2aoiF-60trygLC8P3bnPpd34ArbnWwKgvtF0Bf7iJR~gvNy85iNg3767Ow__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA');
+    background-image: url('../svg/cart.jpeg');
     height: 130vh;
     background-position: center;
     background-repeat: no-repeat;
