--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -1,7 +1,7 @@
 .started {
   width: 100% !important;
   height: 65vh !important;
-  background-image: url("https://s3-alpha-sig.figma.com/img/57c5/d504/de26c540ca74fd712a0e636cd4cdc0fb?Expires=1633910400&Signature=G5CRh3rg32gSb5L0G~j-yfTIIZ5bttQ8yHNWYq9vkenybRJfvOKsoF~32wlhDUMRDR1wQkgyD1hCqcK1iFAWdDGnXafSysN864x2qLzaKSAkqX5it~ul3AWNMURYscj79pTlDqLLa4oQOSuquw32fS1SqiTgsPI8k-OzctunnW6peGnQ8D-t9scf9f1dJ8OHoqJSgQ18tB42QN4fHt1KS5AcT1vHTPWkU-yu2BDQpS7KGnPike-lHwWdDFuZW~zY6~d5f~bnZUuEuhfEMmH2DgoRGHUcRdhpcNm-WRi8WSxZN9ySPjgBDISWhXX0AI6gDyywMYum5mp89SQTt2FJqQ__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA");
+  background-image: url("../svg/de26c540ca74fd712a0e636cd4cdc0fb.jpeg");
   background-size: cover;
   background-position: 100% 55%;
   background-repeat: no-repeat;
