--- a/src/css/SignUp.css
+++ b/src/css/SignUp.css
@@ -1,5 +1,5 @@
 .container-fluid .contentLeft {
-    background-image: url("https://s3-alpha-sig.figma.com/img/94cf/d4df/dd22d129a5bbab44da4da62471dafa2a?Expires=1633910400&Signature=d~qFq3BQc2di08L-vllgVuxwq3pzsPWQrmZ9qZyd0exCL~snleWCOWW17i-CQSLYziculYUzGVoGLJUSxLtA-UVnwALY31DrZjuskSFQHMWpCbH9z0NVJgp4jdWHWqHU~JRDZe659Ke~BLasDljT4dxXwYKw21uI-HatdOoHtOX3mky3gG7QUd6X55JYM8eZbQKgi2aL394kkHHZL2mekLAObSKg1Xl7D6YBsDe61bEitMdomYD6DqCqZr3dS7STHW7oGaip2VJKSKEUy1WpfkkKyeUUib5LrwJ-yOFt3X43utM~-ZoEyLTTXMkKLwop5d65I5~dIsSz-r6cMLfSrg__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA") !important;
+    background-image: url("../svg/bannerLeft.jpeg") !important;
     background-position: center;
     background-size: cover;
     width: 40%;
