--- a/src/css/Profile.css
+++ b/src/css/Profile.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100%;
     padding-top: 5rem;
-    background-image: url("https://s3-alpha-sig.figma.com/img/9e15/a72e/b94b169a2b3bf7010f10c4fce8c1d0a1?Expires=1633305600&Signature=VBm5OZ6OqDBik0afpjMdyt9ST5ikdXh9vbtgfaUOmWOJfkIRqXaHnGgNKkd8YyVNgel7Ts55-1XNrNcacGK56sRxFl~yqC5zIBWdlX2N5KBd0igJvPdaFmG0vOowhuZLW16RT-307geyL0DV0XKRq839w4Tv8alhRtoVsc1-24O3nxtkhLpNCMPhjYxDH6Bt3rzopNIGwYxKKiRFN00h6Uzx5MXvbhzryjIgFtwXqgmvt4BNe419n~Bi2pDv7IhT36iZjcL0V4MNt6n22IyGAvw-69AQvrSkPmPrbh-y5OhC9U5GLO6qojj3eUwfDwrsgs2bd8~YK-9Uepmcl6K75A__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA");
+    background-image: url("../svg/bgprofile.jpeg");
     background-position: center;
     background-size: 100% 100%;
     background-repeat: no-repeat;
